Added directory structure for encrypted and unencrypted files