@@ -3,6 +3,8 @@ package ca.bc.gov.chefs.etl.forms.ltc.quaterly.model;
 import java.util.ArrayList;
 import java.util.List;
 
+import org.apache.commons.lang3.StringUtils;
+
 import ca.bc.gov.chefs.etl.constant.Constants;
 import ca.bc.gov.chefs.etl.parser.IModel;
 
@@ -28,25 +30,25 @@ public class LtcYtdCompHrsSubtotals implements IModel {
 		this.compHrsType = compHrsType;
 	}
 	public String getSubTotalCompHrsStaffYTD() {
-		return subTotalCompHrsStaffYTD.isBlank() ? "0" : subTotalCompHrsStaffYTD;
+		return StringUtils.isBlank(subTotalCompHrsStaffYTD) ? "0" : subTotalCompHrsStaffYTD;
 	}
 	public void setSubTotalCompHrsStaffYTD(String subTotalCompHrsStaffYTD) {
 		this.subTotalCompHrsStaffYTD = subTotalCompHrsStaffYTD;
 	}
 	public String getSubTotalCompHrsContractServicesYTD() {
-		return subTotalCompHrsContractServicesYTD.isBlank() ? "0" : subTotalCompHrsContractServicesYTD;
+		return StringUtils.isEmpty(subTotalCompHrsContractServicesYTD) ? "0" : subTotalCompHrsContractServicesYTD;
 	}
 	public void setSubTotalCompHrsContractServicesYTD(String subTotalCompHrsContractServicesYTD) {
 		this.subTotalCompHrsContractServicesYTD = subTotalCompHrsContractServicesYTD;
 	}
 	public String getSubTotalCompHrsOfficeAllocYTD() {
-		return subTotalCompHrsOfficeAllocYTD.isBlank() ? "0" : subTotalCompHrsOfficeAllocYTD;
+		return StringUtils.isBlank(subTotalCompHrsOfficeAllocYTD) ? "0" : subTotalCompHrsOfficeAllocYTD;
 	}
 	public void setSubTotalCompHrsOfficeAllocYTD(String subTotalCompHrsOfficeAllocYTD) {
 		this.subTotalCompHrsOfficeAllocYTD = subTotalCompHrsOfficeAllocYTD;
 	}
 	public String getSubTotalCompTotalWorkedHrsYTD() {
-		return subTotalCompTotalWorkedHrsYTD.isBlank() ? "0" : subTotalCompTotalWorkedHrsYTD;
+		return StringUtils.isBlank(subTotalCompTotalWorkedHrsYTD) ? "0" : subTotalCompTotalWorkedHrsYTD;
 	}
 	public void setSubTotalCompTotalWorkedHrsYTD(String subTotalCompTotalWorkedHrsYTD) {
 		this.subTotalCompTotalWorkedHrsYTD = subTotalCompTotalWorkedHrsYTD;
